--- a/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
@@ -7,7 +7,13 @@
     - 2.2 实战必备
 - 03.简单实践操作
     - 3.1 简单案例实践
-- 04.ViewModel原理
+    - 3.2 多组件通信案例
+- 04.ViewModel前世今生
+    - 4.1 ViewModel前世痛点
+    - 4.2 更规范化的抽象接口
+    - 4.3 更便于保存数据
+    - 4.4 方便UI组件间通信
+- 05.ViewModel原理
     - 4.1 ViewModel架构图
     - 4.2 ViewModel源码UML
     - 4.3 ViewModel生命周期原理
@@ -22,6 +28,11 @@
 
 
 #### 1.2 有何优点
+- **ViewModel**，或者说 MVVM，Model-View-ViewModel，并非是一个新鲜的词汇，它的定义最早起源于前端，代表着 **数据驱动视图** 的思想。
+    - 比如说，可以通过一个`String`类型的状态来表示一个`TextView`，在实际开发中我们通过观察这些数据的状态，来维护UI的自动更新，这就是 **数据驱动视图（观察者模式）**。
+    - 每当`String`的数据状态发生变更，View层就能检测并自动执行UI的更新。
+- 更加高效
+    - 对于开发者来讲，在开发过程中可以大幅减少UI层和Model层相互调用的代码，转而将**更多的重心投入到业务代码的编写**。
 
 
 ### 02.ViewModel实战必备
@@ -40,14 +51,11 @@
 #### 3.1 简单案例实践
 - 第一步：创建ViewModel
 - 第二步：获取ViewModel
-    - 无构造参数获取
     ```
     // 不带参数的ViewModel获取方法使用非常简单
-    mSavedStateViewModel = ViewModelProvider(this).get(
-        SavedStateViewModel::class.java
-    )
+    mSavedStateViewModel = ViewModelProvider(this).get(SavedStateViewModel::class.java)
     ```
-    - 有参数获取
+    - 有参数获取，稍微麻烦点
     ```
     val viewModel = ViewModelProvider(this,SavedDataViewModel.ViewModeFactory("yc"))
     ```
@@ -66,118 +74,59 @@
 
 
 
+### 04.ViewModel前世今生
+#### 4.1 ViewModel前世痛点
+- 说到MVVM就不得不提Google在2015年IO大会上提出的`DataBinding`库，它的发布直接促进了MVVM在Android领域的发展，开发者可以直接通过将数据状态通过 **伪Java代码** 的形式绑定在`xml`布局文件中，从而将MVVM模式的开发流程形成一个 **闭环**：
+    ``` xml
+    <?xml version="1.0" encoding="utf-8"?>
+    <layout xmlns:android="http://schemas.android.com/apk/res/android">
+           <data>
+               <variable
+                   name="user"
+                   type="User" />
+           </data>
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@{ user.name }"
+              android:textSize="20sp" />
+    </layout>
+    ```
+    - 将UI的逻辑直接粗暴的添加进`xml`布局文件中达到和`View`的绑定，`DataBinding`这种实现方式引起了 **强烈的争论**。
+    - 直至如今，依然有很多开发者无法接受`DataBinding`，这是完全可以理解的，因为它确实 **很难定位语法的错误和运行时的崩溃原因**。
+- MVVM模式并不一定依赖于`DataBinding`
+    - 但是除了`DataBinding`，开发者当时并没有足够多的选择——直至目前，仍然有部分的MVVM开发者坚持不使用 `DataBinding`，取而代之使用生态圈极为丰富的`RxJava`（或者其他）代替 `DataBinding`的数据绑定。
+    - 如果说当时对于 **数据绑定** 的库至少还有官方的`DataBinding`可供参考，`ViewModel`的规范化则是非常困难——基于`ViewModel`层进行状态的管理这个基本的约束，不同的项目、不同的依赖库加上不同的开发者，最终代码中对于 **状态管理** 的实现方式都有很大的不同。
+- 比如，有的开发者，将 **ViewModel** 层像 **MVP** 一样定义为一个接口：
+    ``` kotlin
+    interface IViewModel
+    
+    open class BaseViewModel: IViewModel
+    ```
+- **不同的MVVM也有截然不同的实现方式**
+    - 这种百花齐放的代码风格、难以严格统一的 **开发流派** 导致代码质量的参差不齐，代码的可读性更是天差地别。
 
 
-## ViewModel的前世今生
-
-**ViewModel**，或者说 [MVVM](https://baike.baidu.com/item/MVVM/96310?fr=aladdin) (Model-View-ViewModel)，并非是一个新鲜的词汇，它的定义最早起源于前端，代表着 **数据驱动视图** 的思想。
-
-比如说，我们可以通过一个`String`类型的状态来表示一个`TextView`，同理，我们也可以通过一个`List<T>`类型的状态来维护一个`RecyclerView`的列表——在实际开发中我们通过观察这些数据的状态，来维护UI的自动更新，这就是 **数据驱动视图（观察者模式）**。
-
-每当`String`的数据状态发生变更，View层就能检测并自动执行UI的更新，同理，每当列表的数据源`List<T>`发生变更，`RecyclerView`也会自动刷新列表：
-
-![](https://github.com/qingmei2/qingmei2-blogs-art/blob/master/android/jetpack/viewModel/image1/image.4u7rkd6aqe8.png?raw=true)
 
 
-对于开发者来讲，在开发过程中可以大幅减少UI层和Model层相互调用的代码，转而将**更多的重心投入到业务代码的编写**。
+#### 4.2 更规范化的抽象接口
+- 在官方的`ViewModel`发布之前，`ViewModel`层的基类多种多样，内部的依赖和公共逻辑更是五花八门。新的`ViewModel`组件直接对`ViewModel`层进行了标准化的规范，即使用`ViewModel`(或者其子类`AndroidViewModel`)。
+- 同时，Google官方建议`ViewModel`尽量保证 **纯的业务代码**
+    - 不要持有任何View层(`Activity`或者`Fragment`)或`Lifecycle`的引用，这样保证了`ViewModel`内部代码的可测试性，避免因为`Context`等相关的引用导致测试代码的难以编写（比如，MVP中Presenter层代码的测试就需要额外成本，比如依赖注入或者Mock，以保证单元测试的进行）。
 
-**ViewModel** 的概念就是这样被提出来的，我对它的形容类似一个 **状态存储器** ， 它存储着UI中各种各样的状态, 以 **登录界面** 为例，我们很容易想到最简单的两种状态 ：
 
-```kotlin
-class LoginViewModel {
-    val username: String  // 用户名输入框中的内容
-    val password: String  // 密码输入框中的内容
-}
-```
+#### 4.3 更便于保存数据
+- 由系统响应用户交互或者重建组件，用户无法操控。
+    - 当组件被销毁并重建后，原来组件相关的数据也会丢失——最简单的例子就是**屏幕的旋转**，如果数据类型比较简单，同时数据量也不大，可以通过`onSaveInstanceState()`存储数据，组件重建之后通过`onCreate()`，从中读取`Bundle`恢复数据。但如果是大量数据，不方便序列化及反序列化，则上述方法将不适用。
+    - `ViewModel`的扩展类则会在这种情况下自动保留其数据，如果`Activity`被重新创建了，它会收到被之前相同`ViewModel`实例。当所属`Activity`终止后，框架调用`ViewModel`的`onCleared()`方法释放对应资源。
+- `ViewModel`是有一定的 **作用域** 
+    - 它不会在指定的作用域内生成更多的实例，从而节省了更多关于 **状态维护**（数据的存储、序列化和反序列化）的代码。
+    - `ViewModel`在对应的 **作用域** 内保持生命周期内的 **局部单例**，这就引发一个更好用的特性，那就是`Fragment`、`Activity`等UI组件间的通信。
 
-先不纠结于代码的细节，现在我们知道了ViewModel的重心是对 **数据状态**的维护。接下来我们来看看，在17年之前Google还没有推出ViewModel组件之前，Android领域内MVVM **百花齐放的各种形态** 吧。
 
-### 1.群雄割据时代的百花齐放
-
-说到MVVM就不得不提Google在2015年IO大会上提出的`DataBinding`库，它的发布直接促进了MVVM在Android领域的发展，开发者可以直接通过将数据状态通过 **伪Java代码** 的形式绑定在`xml`布局文件中，从而将MVVM模式的开发流程形成一个 **闭环**：
-
-```xml
-<?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-       <data>
-           <variable
-               name="user"
-               type="User" />
-       </data>
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@{ user.name }"
-          android:textSize="20sp" />
-</layout>
-```
-
-通过 **伪Java代码** 将UI的逻辑直接粗暴的添加进`xml`布局文件中达到和`View`的绑定，`DataBinding`这种实现方式引起了 **强烈的争论**。直至如今，依然有很多开发者无法接受`DataBinding`，这是完全可以理解的，因为它确实 **很难定位语法的错误和运行时的崩溃原因**。
-
-MVVM模式并不一定依赖于`DataBinding`，但是除了`DataBinding`，开发者当时并没有足够多的选择——直至目前，仍然有部分的MVVM开发者坚持不使用 `DataBinding`，取而代之使用生态圈极为丰富的`RxJava`（或者其他）代替 `DataBinding`的数据绑定。
-
-如果说当时对于 **数据绑定** 的库至少还有官方的`DataBinding`可供参考，`ViewModel`的规范化则是非常困难——基于`ViewModel`层进行状态的管理这个基本的约束，不同的项目、不同的依赖库加上不同的开发者，最终代码中对于 **状态管理** 的实现方式都有很大的不同。
-
-比如，有的开发者，将 **ViewModel** 层像 **MVP** 一样定义为一个接口：
-
-```kotlin
-interface IViewModel
-
-open class BaseViewModel: IViewModel
-```
-
-也有开发者(比如这个[repo](https://github.com/hitherejoe/MVVM_Hacker_News/blob/master/app/src/main/java/com/hitherejoe/mvvm_hackernews/viewModel/CommentViewModel.java))直接将ViewModel层继承了可观察的属性（比如`dataBinding`库的`BaseObservable`）,并持有`Context`的引用：
-
-```Java
-public class CommentViewModel extends BaseObservable {
-
-    @BindingAdapter("containerMargin")
-    public static void setContainerMargin(View view, boolean isTopLevelComment) {
-        //...
-    }
-}
-```
-
-**一千个人有一千个哈姆雷特，不同的MVVM也有截然不同的实现方式**，这种百花齐放的代码风格、难以严格统一的 **开发流派** 导致代码质量的参差不齐，代码的可读性更是天差地别。
-
-再加上`DataBinding`本身导致代码阅读性的降低，真可谓南门北派华山论剑，各种思想喷涌而出——从思想的碰撞交流来讲，这并非坏事，但是对于当时想学习MVVM的我来讲，实在是看得眼花缭乱，在学习接触的过程中，我也不可避免的走了许多弯路。
-
-### 2.Google对于ViewModel的规范化尝试
-
-我们都知道Google在去年的 **I/O** 大会非常隆重地推出了一系列的 **架构组件**， [ViewModel](https://developer.android.com/topic/libraries/architecture/viewmodel)正是其中之一，也是本文的主角。
-
-有趣的是，相比较于惹眼的 `Lifecycle` 和 `LiveData`， `ViewModel` 显得非常低调，它主要提供了这些特性：
-
-* 配置更改期间自动保留其数据 (比如屏幕的横竖旋转)
-* `Activity`、`Fragment`等UI组件之间的通信
-
-如果让我直接吹捧`ViewModel`多么多么优秀，我会非常犯难，因为它表面展现的这些功能实在不够惹眼，但是有幸截止目前为止，我花费了一些笔墨阐述了`ViewModel`在这之前的故事——**它们是接下来正文不可缺少的铺垫**。
-
-### 3.ViewModel在这之前的窘境
-
-也许您尚未意识到，在官方的`ViewModel`发布之前，MVVM开发模式中，ViewModel层的一些窘境，但实际上我已经尽力通过叙述的方式将这些问题描述出来：
-
-#### 3.1 更规范化的抽象接口
-
-在官方的`ViewModel`发布之前，`ViewModel`层的基类多种多样，内部的依赖和公共逻辑更是五花八门。新的`ViewModel`组件直接对`ViewModel`层进行了标准化的规范，即使用`ViewModel`(或者其子类`AndroidViewModel`)。
-
-同时，Google官方建议`ViewModel`尽量保证 **纯的业务代码**，不要持有任何View层(`Activity`或者`Fragment`)或`Lifecycle`的引用，这样保证了`ViewModel`内部代码的可测试性，避免因为`Context`等相关的引用导致测试代码的难以编写（比如，MVP中Presenter层代码的测试就需要额外成本，比如依赖注入或者Mock，以保证单元测试的进行）。
-
-#### 3.2 更便于保存数据
-
-由系统响应用户交互或者重建组件，用户无法操控。当组件被销毁并重建后，原来组件相关的数据也会丢失——最简单的例子就是**屏幕的旋转**，如果数据类型比较简单，同时数据量也不大，可以通过`onSaveInstanceState()`存储数据，组件重建之后通过`onCreate()`，从中读取`Bundle`恢复数据。但如果是大量数据，不方便序列化及反序列化，则上述方法将不适用。
-
-`ViewModel`的扩展类则会在这种情况下自动保留其数据，如果`Activity`被重新创建了，它会收到被之前相同`ViewModel`实例。当所属`Activity`终止后，框架调用`ViewModel`的`onCleared()`方法释放对应资源：
-
-![](https://github.com/qingmei2/qingmei2-blogs-art/blob/master/android/jetpack/viewModel/image.i28ly3qq5y8.png?raw=true)
-
-这样看来，`ViewModel`是有一定的 **作用域** 的，它不会在指定的作用域内生成更多的实例，从而节省了更多关于 **状态维护**（数据的存储、序列化和反序列化）的代码。
-
-`ViewModel`在对应的 **作用域** 内保持生命周期内的 **局部单例**，这就引发一个更好用的特性，那就是`Fragment`、`Activity`等UI组件间的通信。
-
-### 3.3 更方便UI组件之间的通信
-
-一个`Activity`中的多个`Fragment`相互通讯是很常见的，如果`ViewModel`的实例化作用域为`Activity`的生命周期，则两个`Fragment`可以持有同一个ViewModel的实例，这也就意味着**数据状态的共享**:
+#### 4.4 方便UI组件间通信
+- 一个`Activity`中的多个`Fragment`相互通讯是很常见的
+    - 如果`ViewModel`的实例化作用域为`Activity`的生命周期，则两个`Fragment`可以持有同一个ViewModel的实例，这也就意味着**数据状态的共享**:
 
 ```Java
 public class AFragment extends Fragment {
