--- a/Read/ReadShareWiki/07.底层思维/01.做事专注的锻炼.md
+++ b/Read/ReadShareWiki/07.底层思维/01.做事专注的锻炼.md
@@ -11,7 +11,14 @@
 
 
 ### 01.什么是专注能力
-- 专注力是人们进行活动时的心理状态，心理活动朝向某一事物，有选择地接受信息，抑制其他活动和信息。当一个人专注时，精神饱满，做事效率高，情绪积极，身体也会感到非常地舒适，不会轻易受到周围环境的影响。
+#### 1.1 专注能力解读
+- 专注力是人们进行活动时的心理状态，心理活动朝向某一事物，有选择地接受信息，抑制其他活动和信息。
+- 当一个人专注时，精神饱满，做事效率高，情绪积极，身体也会感到非常地舒适，不会轻易受到周围环境的影响。
+
+
+#### 1.2 看一个小案例
+- 做到专注。但注意力不是你想集中就能集中的。你可能无数次的遇到这样的情形：写文章的时候有个概念没搞明白，然后上网去查，查到之后开始专心研究这个概念，并进行延展……
+- 然后你感觉有点累了，忍不住打了一局王者荣耀或看了一集美剧奖励自己……最后你发现时间过去了三个小时，你最初要完成的写作，依然停留在开头的几十个字上……你完全偏离了任务轨道。
 
 
 ### 02.打破专注力迷思
@@ -27,6 +34,13 @@
 
 
 ### 03.需要注意几方面
+#### 3.1 游离专注的边界
+- 世界上只有一小部分天才可以非常顺畅的在专注和游离状态之间切换，说学就学，说玩就玩。就像我们上学时，老师家长经常提的那句话，“玩的时候好好玩，学的时候好好学”。
+- 这叫天赋，我们普通人是学不了的。由于现在大部分玩耍和学习的媒介都是手机和电脑，我们反而进一步模糊了学和玩之间的界限，该专注的时候游离了，该游离的时候专注了。
+
+
+
+#### 3.2 注意两个方面
 - 提高专注力，要注意两方面：减少破坏专注力的行为和多用提高专注力的方式。
 - 首先要减少破坏专注的行为。
 - 提高专注力的方式。
@@ -59,7 +73,7 @@
 - 当学习目标比较大时，将学习任务进行分解，把大目标分为一个个小目标一步一步完成。
 
 
-#### 5.2 给任务设定⌚️
+#### 5.2 给任务设定时间
 - 给自己设定最后期限。一旦有了时间压力的意识，会使大脑和行动活动更加敏捷。
 - 有时候学习任务比较多，可以在书桌醒目处贴便利贴，进行自我提醒或自我鼓励。在完成目标之后，比如在目标上打勾。
 
