--- a/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
@@ -13,11 +13,14 @@
     - 4.2 更规范化的抽象接口
     - 4.3 更便于保存数据
     - 4.4 方便UI组件间通信
+    - 4.5 对状态的持有和维护
 - 05.ViewModel原理
     - 4.1 ViewModel架构图
     - 4.2 ViewModel源码UML
     - 4.3 ViewModel生命周期原理
     - 4.4 为何设计它
+- 06.彻底搞懂ViewModel设计
+
 
 
 ### 01.ViewModel介绍
@@ -127,91 +130,64 @@
 #### 4.4 方便UI组件间通信
 - 一个`Activity`中的多个`Fragment`相互通讯是很常见的
     - 如果`ViewModel`的实例化作用域为`Activity`的生命周期，则两个`Fragment`可以持有同一个ViewModel的实例，这也就意味着**数据状态的共享**:
-
-```Java
-public class AFragment extends Fragment {
-    private CommonViewModel model;
-    public void onActivityCreated() {
-        model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+    ``` Java
+    public class AFragment extends Fragment {
+        private CommonViewModel model;
+        public void onActivityCreated() {
+            model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+        }
     }
-}
-
-public class BFragment extends Fragment {
-    private CommonViewModel model;
-    public void onActivityCreated() {
-        model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+    
+    public class BFragment extends Fragment {
+        private CommonViewModel model;
+        public void onActivityCreated() {
+            model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+        }
     }
-}
-```
+    ```
+- 上面两个Fragment `getActivity()`返回的是同一个宿主`Activity`，因此两个`Fragment`之间返回的是同一个`ViewModel`。
+- ViewModel提供的这些特性，为什么感觉互相之间没有联系呢？这些特性的本质是什么？
 
-> 上面两个Fragment `getActivity()`返回的是同一个宿主`Activity`，因此两个`Fragment`之间返回的是同一个`ViewModel`。
 
-我不知道正在阅读本文的您，有没有冒出这样一个想法：
+#### 4.5 对状态的持有和维护
+- `ViewModel`层的根本职责，就是负责维护**UI的状态**。追根究底就是维护对应的**数据**——毕竟，无论是MVP还是MVVM，UI的展示就是对数据的渲染。
+    * 1.定义了`ViewModel`的基类，并建议通过持有`LiveData`维护保存数据的状态；
+    * 2.`ViewModel`不会随着`Activity`的屏幕旋转而销毁，减少了**维护状态**的代码成本（数据的存储和读取、序列化和反序列化）；
+    * 3.在对应的作用域内，保正只生产出对应的唯一实例，**多个`Fragment`维护相同的数据状态**，极大减少了UI组件之间的**数据传递**的代码成本。
 
-> ViewModel提供的这些特性，为什么感觉互相之间没有联系呢？
 
-这就引发下面这个问题，那就是：
 
-> 这些特性的本质是什么？
+### 06.彻底搞懂ViewModel设计
+- 回顾一下`ViewModel`应起到的作用：
+    * 1.规范化了`ViewModel`的基类；
+    * 2.`ViewModel`不会随着`Activity`的屏幕旋转而销毁；
+    * 3.在对应的作用域内，保正只生产出对应的唯一实例，保证UI组件间的通信。
 
-### 4. ViewModel：对状态的持有和维护
 
-`ViewModel`层的根本职责，就是负责维护**UI的状态**，追根究底就是维护对应的**数据**——毕竟，无论是MVP还是MVVM，UI的展示就是对数据的渲染。
-
-* 1.定义了`ViewModel`的基类，并建议通过持有`LiveData`维护保存数据的状态；
-* 2.`ViewModel`不会随着`Activity`的屏幕旋转而销毁，减少了**维护状态**的代码成本（数据的存储和读取、序列化和反序列化）；
-* 3.在对应的作用域内，保正只生产出对应的唯一实例，**多个`Fragment`维护相同的数据状态**，极大减少了UI组件之间的**数据传递**的代码成本。
-
-现在我们对于`ViewModel`的职责和思想都有了一定的了解，按理说接下来我们应该阐述如何使用`ViewModel`了，但我想先等等，因为我觉得相比API的使用，**掌握其本质的思想**会让你在接下来的代码实践中**如鱼得水**。
-
-## 不，不是源码解析...
-
-通过库提供的API接口作为开始，阅读其内部的源码，这是标准掌握代码内部原理的思路，这种方式的时间成本极高，即使有相关源码分析的博客进行引导，文章中大片大片的源码和注释也足以让人望而却步，**于是我理所当然这么想**：
-
-> 先学会怎么用，再抽空系统学习它的原理和思想吧......
-
-发现没有，这和上学时候的学习方式竟然**截然相反**，甚至说**本末倒置**也不奇怪——任何一个物理或者数学公式，在使用它做题之前，对它背后的基础理论都应该是优先去**系统性学习掌握**的（比如，数学公式的学习一般都需要先通过一定方式推导和证明），这样我才能拿着这个知识点对课后的习题**举一反三**。这就好比，如果一个老师直接告诉你一个公式，然后啥都不说让你做题，这个老师一定是不合格的。
-
-我也不是很喜欢大篇幅地复制源码，我准备换个角度，站在Google工程师的角度看看怎么样设计出一个`ViewModel`。
-
-## 站在更高的视角，设计ViewModel
-
-现在我们是Google工程师，让我们再回顾一下`ViewModel`应起到的作用：
-
-* 1.规范化了`ViewModel`的基类；
-* 2.`ViewModel`不会随着`Activity`的屏幕旋转而销毁；
-* 3.在对应的作用域内，保正只生产出对应的唯一实例，保证UI组件间的通信。
-
-### 1.设计基类
-
-这个简直太简单了：
-
-```Java
-public abstract class ViewModel {
-
-    protected void onCleared() {
+#### 6.1 设计ViewModel基类
+- 这个简直太简单了：
+    ```Java
+    public abstract class ViewModel {
+        protected void onCleared() {
+        }
     }
-}
-```
-我们定义一个抽象的`ViewModel`基类，并定义一个`onCleared()`方法以便于释放对应的资源，接下来，开发者只需要让他的`XXXViewModel`继承这个抽象的`ViewModel`基类即可。
+    ```
+- 定义一个抽象的`ViewModel`基类，并定义一个`onCleared()`方法以便于释放对应的资源，接下来，开发者只需要让他的`XXXViewModel`继承这个抽象的`ViewModel`基类即可。
 
-### 2.保证数据不随屏幕旋转而销毁
 
-这是一个很神奇的功能，但它的实现方式却非常简单,我们先了解这样一个知识点:
-
-> `setRetainInstance(boolean)` 是`Fragment`中的一个方法。将这个方法设置为true就可以使当前`Fragment`在`Activity`重建时存活下来
-
-这似乎和我们的功能非常吻合，于是我们不禁这样想，可不可以让`Activity`持有这样一个不可见的`Fragment`(我们干脆叫他`HolderFragment`)，并让这个`HolderFragment`调用`setRetainInstance(boolean)`方法并持有`ViewModel`——这样当`Activity`因为屏幕的旋转销毁并重建时，该`Fragment`存储的`ViewModel`自然不会被随之销毁回收了:
-
-```Java
-public class HolderFragment extends Fragment {
-
-     public HolderFragment() { setRetainInstance(true); }
-
-      private ViewModel mViewModel;
-      // getter、setter...
-}
-```
+#### 6.2 保证数据不随屏幕旋转而销毁
+- 这是一个很神奇的功能，但它的实现方式却非常简单,我们先了解这样一个知识点:
+    - `setRetainInstance(boolean)` 是`Fragment`中的一个方法。将这个方法设置为true就可以使当前`Fragment`在`Activity`重建时存活下来
+    - 这似乎和我们的功能非常吻合，可不可以让`Activity`持有这样一个不可见的`Fragment`(我们干脆叫他`HolderFragment`)，并让这个`HolderFragment`调用`setRetainInstance(boolean)`方法并持有`ViewModel`——这样当`Activity`因为屏幕的旋转销毁并重建时，该`Fragment`存储的`ViewModel`自然不会被随之销毁回收了:
+    ```java
+    public class HolderFragment extends Fragment {
+    
+         public HolderFragment() { setRetainInstance(true); }
+    
+          private ViewModel mViewModel;
+          // getter、setter...
+    }
+    ```
 
 当然，考虑到一个复杂的UI组件可能会持有多个`ViewModel`，我们更应该让这个不可见的`HolderFragment`持有一个`ViewModel`的数组（或者Map）——我们干脆封装一个叫`ViewModelStore`的容器对象，用来承载和代理所有`ViewModel`的管理：
 
