--- a/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
@@ -20,6 +20,10 @@
     - 4.3 ViewModel生命周期原理
     - 4.4 为何设计它
 - 06.彻底搞懂ViewModel设计
+    - 6.1 设计ViewModel基类
+    - 6.2 保证数据不随屏幕旋转而销毁
+    - 6.3 作用域内保正唯一实例
+- 07.总结和思考下
 
 
 
@@ -157,6 +161,7 @@
 
 
 
+
 ### 06.彻底搞懂ViewModel设计
 - 回顾一下`ViewModel`应起到的作用：
     * 1.规范化了`ViewModel`的基类；
@@ -188,143 +193,89 @@
           // getter、setter...
     }
     ```
-
-当然，考虑到一个复杂的UI组件可能会持有多个`ViewModel`，我们更应该让这个不可见的`HolderFragment`持有一个`ViewModel`的数组（或者Map）——我们干脆封装一个叫`ViewModelStore`的容器对象，用来承载和代理所有`ViewModel`的管理：
-
-```Java
-public class ViewModelStore {
-    private final HashMap<String, ViewModel> mMap = new HashMap<>();
-    // put(), get(), clear()....
-}
-
-public class HolderFragment extends Fragment {
-
-      public HolderFragment() { setRetainInstance(true); }
-
-      private ViewModelStore mViewModelStore = new ViewModelStore();
-}
-```
-
-好了，接下来需要做的就是，在实例化`ViewModel`的时候：
-
-1.当前`Activity`如果没有持有`HolderFragment`，就实例化并持有一个`HolderFragment`
-2.`Activity`获取到`HolderFragment`，并让`HolderFragment`将`ViewModel`存进`HashMap`中。
-
-这样，具有生命周期的`Activity`在旋转屏幕销毁重建时，因为不可见的`HolderFragment`中的`ViewModelStore`容器持有了`ViewModel`，`ViewModel`和其内部的状态并没有被回收销毁。
-
-这需要一个条件，在实例化`ViewModel`的时候，我们似乎还需要一个`Activity`的引用，这样才能保证 **获取或者实例化内部的`HolderFragment`并将`ViewModel`进行存储**。
-
-于是我们设计了这样一个的API，在`ViewModel`的实例化时，加入所需的`Activity`依赖：
-
-```Java
-CommonViewModel viewModel = ViewModelProviders.of(activity).get(CommonViewModel.class)
-```
-
-我们注入了`Activity`，因此`HolderFragment`的实例化就交给内部的代码执行：
-
-```Java
-HolderFragment holderFragmentFor(FragmentActivity activity) {
-     FragmentManager fm = activity.getSupportFragmentManager();
-     HolderFragment holder = findHolderFragment(fm);
-     if (holder != null) {
+- 当然，考虑到一个复杂的UI组件可能会持有多个`ViewModel`，我们更应该让这个不可见的`HolderFragment`持有一个`ViewModel`的数组（或者Map）——我们干脆封装一个叫`ViewModelStore`的容器对象，用来承载和代理所有`ViewModel`的管理：
+    ``` java
+    public class ViewModelStore {
+        private final HashMap<String, ViewModel> mMap = new HashMap<>();
+        // put(), get(), clear()....
+    }
+    
+    public class HolderFragment extends Fragment {
+    
+          public HolderFragment() { setRetainInstance(true); }
+    
+          private ViewModelStore mViewModelStore = new ViewModelStore();
+    }
+    ```
+- 接下来需要做的就是，在实例化`ViewModel`的时候：
+    - 1.当前`Activity`如果没有持有`HolderFragment`，就实例化并持有一个`HolderFragment`
+    - 2.`Activity`获取到`HolderFragment`，并让`HolderFragment`将`ViewModel`存进`HashMap`中。
+- 这样，具有生命周期的`Activity`在旋转屏幕销毁重建时，因为不可见的`HolderFragment`中的`ViewModelStore`容器持有了`ViewModel`，`ViewModel`和其内部的状态并没有被回收销毁。
+    - 这需要一个条件，在实例化`ViewModel`的时候，我们似乎还需要一个`Activity`的引用，这样才能保证 **获取或者实例化内部的`HolderFragment`并将`ViewModel`进行存储**。
+- 于是我们设计了这样一个的API，在`ViewModel`的实例化时，加入所需的`Activity`依赖：
+    ``` java
+    CommonViewModel viewModel = ViewModelProviders.of(activity).get(CommonViewModel.class)
+    ```
+    - 注入了`Activity`，因此`HolderFragment`的实例化就交给内部的代码执行：
+    ``` java
+    HolderFragment holderFragmentFor(FragmentActivity activity) {
+         FragmentManager fm = activity.getSupportFragmentManager();
+         HolderFragment holder = findHolderFragment(fm);
+         if (holder != null) {
+              return holder;
+          }
+          holder = createHolderFragment(fm);
           return holder;
-      }
-      holder = createHolderFragment(fm);
-      return holder;
-}
-```
-
-这之后，因为我们传入了一个`ViewModel`的`Class`对象，我们默认就可以通过反射的方式实例化对应的`ViewModel`，并交给`HolderFragment`中的`ViewModelStore`容器存起来：
-
-```Java
-public <T extends ViewModel> T get(Class<T> modelClass) {
-      // 通过反射的方式实例化ViewModel，并存储进ViewModelStore
-      viewModel = modelClass.getConstructor(Application.class).newInstance(mApplication);
-      mViewModelStore.put(key, viewModel);
-      return (T) viewModel;
- }
-```
-
-### 3.在对应的作用域内，保正只生产出对应的唯一实例
-
-如何保证在不同的Fragment中，通过以下代码生成同一个ViewModel的实例呢？
-
-```Java
-public class AFragment extends Fragment {
-    private CommonViewModel model;
-    public void onActivityCreated() {
-        model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
     }
-}
+    ```
+- 这之后，因为我们传入了一个`ViewModel`的`Class`对象，我们默认就可以通过反射的方式实例化对应的`ViewModel`，并交给`HolderFragment`中的`ViewModelStore`容器存起来：
+    ``` java
+    public <T extends ViewModel> T get(Class<T> modelClass) {
+          // 通过反射的方式实例化ViewModel，并存储进ViewModelStore
+          viewModel = modelClass.getConstructor(Application.class).newInstance(mApplication);
+          mViewModelStore.put(key, viewModel);
+          return (T) viewModel;
+     }
+    ```
 
-public class BFragment extends Fragment {
-    private CommonViewModel model;
-    public void onActivityCreated() {
-        model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+#### 6.3 作用域内保正唯一实例
+- 如何保证在不同的Fragment中，通过以下代码生成同一个ViewModel的实例呢？
+    ``` java
+    public class AFragment extends Fragment {
+        private CommonViewModel model;
+        public void onActivityCreated() {
+            model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+        }
     }
-}
-```
-
-其实很简单，只需要在上一步实例化`ViewModel`的`get()`方法中加一个判断就行了：
-
-```Java
-public <T extends ViewModel> T get(Class<T> modelClass) {
+    
+    public class BFragment extends Fragment {
+        private CommonViewModel model;
+        public void onActivityCreated() {
+            model = ViewModelProviders.of(getActivity()).get(CommonViewModel.class);
+        }
+    }
+    ```
+- 其实很简单，只需要在上一步实例化`ViewModel`的`get()`方法中加一个判断就行了：
+    ``` java
+    public <T extends ViewModel> T get(Class<T> modelClass) {
       // 先从ViewModelStore容器中去找是否存在ViewModel的实例
       ViewModel viewModel = mViewModelStore.get(key);
-
+    
       // 若ViewModel已经存在，就直接返回
       if (modelClass.isInstance(viewModel)) {
             return (T) viewModel;
       }
-
+    
       // 若不存在，再通过反射的方式实例化ViewModel，并存储进ViewModelStore
       viewModel = modelClass.getConstructor(Application.class).newInstance(mApplication);
       mViewModelStore.put(key, viewModel);
       return (T) viewModel;
- }
-```
+    }
+    ```
 
-现在，我们成功实现了预期的功能——事实上，上文中的代码正是`ViewModel`官方核心部分功能的源码，甚至默认`ViewModel`实例化的API也没有任何改变：
 
-```Java
-CommonViewModel viewModel = ViewModelProviders.of(activity).get(CommonViewModel.class);
-```
-
-当然，因为篇幅所限，我将源码进行了简单的删减，同时没有讲述构造方法中带参数的`ViewModel`的实例化方式，但对于目前已经掌握了**设计思想**和**原理**的你，学习这些API的使用几乎不费吹灰之力。
-
-## 总结与思考
-
-`ViewModel`是一个设计非常精巧的组件，它功能并不复杂，相反，它简单的难以置信，你甚至只需要了解实例化`ViewModel`的API如何调用就行了。
-
-同时，它的背后掺杂的思想和理念是值得去反复揣度的。比如，如何保证对状态的规范化管理？如何将纯粹的业务代码通过良好的设计下沉到`ViewModel`中？对于非常复杂的界面，如何将各种各样的功能抽象为数据状态进行解耦和复用？随着MVVM开发的深入化，这些问题都会一个个浮出水面，这时候`ViewModel`组件良好的设计和这些不起眼的小特性就随时有可能成为璀璨夺目的闪光点，帮你攻城拔寨。
-
-**--------------------------广告分割线------------------------------**
-
-## 系列文章
-
->  **争取打造 Android Jetpack 讲解的最好的博客系列**：
->* [Android官方架构组件Lifecycle：生命周期组件详解&原理分析](https://juejin.im/post/5c53beaf51882562e27e5ad9)
->* [Android官方架构组件ViewModel:从前世今生到追本溯源](https://juejin.im/post/5c047fd3e51d45666017ff86)
->* [Android官方架构组件LiveData: 观察者模式领域二三事](https://juejin.im/post/5c25753af265da61561f5335)
->* [Android官方架构组件Paging：分页库的设计美学](https://juejin.im/post/5c53ad9e6fb9a049eb3c5cfd)
->* [Android官方架构组件Paging-Ex：为分页列表添加Header和Footer](https://juejin.im/post/5caa0052f265da24ea7d3c2c)
->* [Android官方架构组件Paging-Ex：列表状态的响应式管理](https://juejin.im/post/5ce6ba09e51d4555e372a562)
->* [Android官方架构组件Navigation：大巧不工的Fragment管理框架](https://juejin.im/post/5c53be3951882562d27416c6)  
->* [Android官方架构组件DataBinding-Ex:双向绑定篇](https://juejin.im/post/5c3e04b7f265da611b589574)  
-
-> **Android Jetpack 实战篇**：
->* [开源项目：MVVM+Jetpack实现的Github客户端](https://github.com/qingmei2/MVVM-Rhine)
->* [开源项目：基于MVVM, MVI+Jetpack实现的Github客户端](https://github.com/qingmei2/MVI-Rhine)
->* [总结：使用MVVM尝试开发Github客户端及对编程的一些思考](https://juejin.im/post/5be7bbd9f265da61797458cf)
-
----
-
-## 关于我
-
-Hello，我是[却把清梅嗅](https://github.com/qingmei2)，如果您觉得文章对您有价值，欢迎 ❤️，也欢迎关注我的[个人博客](https://juejin.im/user/588555ff1b69e600591e8462)或者[Github](https://github.com/qingmei2)。
-
-如果您觉得文章还差了那么点东西，也请通过**关注**督促我写出更好的文章——万一哪天我进步了呢？
-
-* [我的Android学习体系](https://github.com/qingmei2/android-programming-profile)
-* [关于文章纠错](https://github.com/qingmei2/Programming-life/blob/master/error_collection.md)
-* [关于知识付费](https://github.com/qingmei2/Programming-life/blob/master/appreciation.md)
+### 07.总结和思考下
+- `ViewModel`是一个设计非常精巧的组件，它功能并不复杂，相反，它简单的难以置信，你甚至只需要了解实例化`ViewModel`的API如何调用就行了。
+- 同时，它的背后掺杂的思想和理念是值得去反复揣度的。比如，如何保证对状态的规范化管理？如何将纯粹的业务代码通过良好的设计下沉到`ViewModel`中？
+- 对于非常复杂的界面，如何将各种各样的功能抽象为数据状态进行解耦和复用？
+- 随着MVVM开发的深入化，这些问题都会一个个浮出水面，这时候`ViewModel`组件良好的设计和这些不起眼的小特性就随时有可能成为璀璨夺目的闪光点，帮你攻城拔寨。
