--- a/Read/ReadKotlinWiki/02.高阶拓展/04.Null和判空深度介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/04.Null和判空深度介绍.md
@@ -12,27 +12,28 @@
 
 ### 01.可空性和空安全
 #### 1.1 什么是可空性
-- 在 Kotlin 中，类型系统区分一个引用是可以容纳 null（可空引用）还是不能容纳（非空引用）。 例如，String 类型的常规变量不能指向 null 
-    ```kotlin
+- 在 `Kotlin` 中，类型系统区分一个引用是可以容纳 `null`（可空引用）还是不能容纳（非空引用）。 例如，`String` 类型的常规变量不能指向 `null`
+    ``` kotlin
     var name: String = "yc"
     //编译错误
     //name = null
     ```
-- 如果希望一个变量可以储存 null 引用，需要显式地在类型名称后面加上问好来标记它：
-    ```kotlin
+- 如果希望一个变量可以储存 `null` 引用，需要显式地在类型名称后面加上问好来标记它：
+    ``` kotlin
     var name: String ?= "yc"
     name = null
     ```
-- 问号可以加在任何类型的后面来表示这个类型的变量可以存储 null 引用：Int?、Double? 、Long? 等
-- Kotlin 对可空类型的显式支持有助于防止 NullPointerException 导致的异常问题，编译器不允许不对可空变量做 null 检查就直接调用其属性
+- 问号可以加在任何类型的后面
+    - 表示这个类型的变量可以存储 `null` 引用：Int?、Double? 、Long? 等
+- `Kotlin` 对可空类型的显式支持有助于防止 `NullPointerException` 导致的异常问题，编译器不允许不对可空变量做 null 检查就直接调用其属性
     ```kotlin
     fun check(name: String?): Boolean {
         //编译器不允许不对 name 做 null 检查就直接调用其属性
         return name.isNotEmpty()
     }
     ```
-- 需要显式地进行 null 检查
-    ```kotlin
+- 需要显式地进行 `null` 检查
+    ``` kotlin
     fun check(name: String?): Boolean {
         if (name != null) {
             return name.isNotEmpty()
@@ -43,8 +44,8 @@
 
 
 #### 1.2 什么是空安全
-- 在 kotlin 中，默认定义的变量不能为 null 的，这可以避免很多的 NullPointerException。
-    ```
+- 在 `kotlin` 中，默认定义的变量不能为 `null` 的，这可以避免很多的 `NullPointerException`。
+    ``` kotlin
     var b: String? = "abc"
     b = null
     指定一个变量可null是通过在类型的最后增加一个问号：
@@ -63,8 +64,8 @@
 
 ### 02.空安全运算符：?.和!!.和?=
 - 安全调用运算符：?. 
-    - 允许把一次 null 检查和一次方法调用合并为一个操作，如果变量值非空，则方法或属性会被调用，否则直接返回 null。例如，以下两种写法是完全等同的：
-    ```kotlin
+    - 允许把一次 `null` 检查和一次方法调用合并为一个操作，如果变量值非空，则方法或属性会被调用，否则直接返回 null。例如，以下两种写法是完全等同的：
+    ``` kotlin
     //kotlin:
     a?.foo()
   
@@ -77,7 +78,7 @@
     - 使用 ?= 操作符，当前面的值不为空取前面的值，否则取后面的值，这和java中三目运算符类似
 - !!. 使用和含义
     - 使用 !!. 操作符可以跳过限制检查通过编译，此时如果变量为空会抛出空指针异常。
-    ```
+    ``` kotlin
     //kotlin:
     a!!.foo()
   
