--- a/Read/ReadShareWiki/01.出发启程/01.你究竟想怎么过.md
+++ b/Read/ReadShareWiki/01.出发启程/01.你究竟想怎么过.md
@@ -1,8 +1,9 @@
 #### 目录介绍
 - 01.有过自己的梦想
 - 02.人生的需求模型
-- 03.不同阶段的追求
-- 04.成长生涯的愿景
+- 03.自己在那个层次
+- 04.不同阶段的追求
+- 05.成长生涯的愿景
 
 
 
@@ -14,13 +15,20 @@
 
 ### 02.人生的需求模型
 - 上世纪四十年代（1943 年）美国心理学家亚伯拉罕·马斯洛在《人类激励理论》中提出了需求层次理论模型，它是行为科学的理论之一。该理论认为个体成长发展的内在力量是动机，而动机是由多种不同性质的需要所组成，各种需要之间，有先后顺序与高低层次之分，每一层次的需要与满足，将决定个体人格发展的境界或程度。
+- 1）生理需要，是个人生存的基本需要，如吃、喝、住处。
+- 2）安全需要，包括心理上与物质上的安全保障，如不受盗窃的威胁，预防危险事故，职业有保障，有社会保险和退休基金等。
+- 3）社交需要。人是社会的一员，需要友谊和群体的归宿感，人际交往需要彼此同情、互助和赞许。
+- 4）尊重需要，包括要求受到别人的尊重和自己具有内在的自尊心。
+- 5）自我实现需要，指通过自己的努力，实现自己对生活的期望，从而对生活和工作真正感到很有意义。
+- 人在满足了基本的需求之后，就要去实现更高的需求和目标。一个人可以有自我实现的愿望，但要达到自我实现的境界，成为一个自我实现的人，却不是每个人都能办到的，这种人也只是少数而已。
+- 
+
+
+### 03.自己在那个层次
 
 
 
-
-
-
-### 03.不同阶段的追求
+### 04.不同阶段的追求
 - 在人生的不同阶段，会产生不同层次的目标需求。
 - 在人生的早期，我们努力学习，考一个好大学，拥有一技之长，找一份好工作，带来更高薪的收入，这很大程度都是为了满足图中最底层的生存需求，让生活变得更舒适美好。
 - 成长拼搏数年，事业小成，工作稳定，有房，有车，有娃后，第二层次，也就是安全的需求开始凸显。有人在这阶段开始给自己、父母、老婆、孩子都买人寿保险，开始考虑理财，投资甚至强身健体。然而处在这个阶段时，我却有一种强烈的不安全感，这也许和长年的程序员职业经历养成的习惯也有关系。
@@ -31,7 +39,7 @@
 
 
 
-### 04.成长生涯的愿景
+### 05.成长生涯的愿景
 - “生涯” 一词最早来自庄子语：吾生也有涯，而知也无涯。以有涯随无涯，殆已。“涯” 字的原意是水边，隐喻人生道路的尽头，尽头已经没了路，是终点，是边界。
 - 对生涯提出了四个维度：高度、宽度、深度和温度。这里就借他山之玉，来谈谈我的理解。
 - 高度：背后的价值观是影响与权力。代表性关键词有：追逐竞争、改变生活。
