--- a/Read/ReadShareWiki/01.出发启程/03.目标方向的选择.md
+++ b/Read/ReadShareWiki/01.出发启程/03.目标方向的选择.md
@@ -1,10 +1,26 @@
 #### 目录介绍
+- 01.首先思考一句话
+- 02.然后来看个故事
 
 
 
 
 
+### 01.首先思考一句话
+- 曾经流传着一句话，选择大于努力。大概的意思是，只要方向选择的好，那么就能距离成功不远了。
+- 可是你要是问，什么样的选择才是好的呢？别人会说，适合自己的就好……你听了之后觉得很有道理，但是又感觉说不出所以然。
+- 认为选择比努力重要的人，那是不知道后半句。做出正确的选择需要步步为营，只有足够的人生积累，才能选择正确的道路。简而言之，努力是做出正确选择的基础。
 
+
+
+### 02.然后来看个故事
+- 这里我先讲一个小的故事……一个毕业于知名高校的年轻人，自认为有能力有学识。毕业四年，工作换了三份。原因是他觉得选择可比努力重要多了，自己应该选择更好的。
+- 第一次，他根据专业选择了新闻，入职后觉得累，就辞职了。
+- 第二次，看到别人做房地产，立马去应聘。一段时间后，觉得不适合，再次辞职。
+- 第三次，想着马云、刘强东都是做互联网起家的，到了一个互联网公司。几个月后，又开始抱怨选错了。
+- 按照这个年轻人的观点——“选择比努力重要”，毕业四年，他选了三次，按理说应该小有成就才是，为什么最后却是一事无成呢？秘诀就在于努力，没有十成的努力支撑的选择不过是无头苍蝇，到处乱撞罢了。
+- 故事中的年轻人自认为深思熟虑的选择不过是盲从，既没有亲自调查，也没有深入了解，看到什么乱选一气，期待用这种选择获得成功，是很难的。实际上，选择能提供的，只有不同的道路。努力了，才能知道哪条路有胜算。
+- 选择是个奢饰品，只有拼命努力的人才有拥有。不努力的人，连选项都没有。万千条路，哪有那么容易就选对？一定是努力让能力、眼界、学识都达到一定高度之后，走出的那一步，才叫“选择”。遗憾的是，很多人深陷“选对了就能成功”的流毒，把不知深浅的决定当深思熟虑，把不明所以的道路当金光大道，还洋洋自得嘲笑那些认真努力的人。
 
 
 
