--- a/Read/ReadAndroidWiki/14.Jetpack/03.LiveData学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/03.LiveData学习.md
@@ -23,13 +23,13 @@
 
 ### 01.LiveData介绍
 #### 1.1 是什么东西
-- LiveData是一个可观察数据持有者类。与常规的可观察对象不同，LiveData是生命周期感知的，这意味着它尊重其他应用组件的生命周期，如活动、片段或服务。
+- `LiveData`是一个可观察数据持有者类。与常规的可观察对象不同，`LiveData`是生命周期感知的，这意味着它尊重其他应用组件的生命周期，如活动、片段或服务。
 
 
 #### 1.2 有何优点
 - 数据变更的时候更新UI
 - 没有内存泄漏
-- 不会因为停止Activity崩溃
+- 不会因为停止`Activity`崩溃
 - 无需手动处理生命周期
 - 共享资源
 
@@ -43,14 +43,11 @@
 
 
 #### 2.2 实战必备
-- observe(@NonNull LifecycleOwner owner, @NonNull Observer<? super T> observer)	
+- `observe(@NonNull LifecycleOwner owner, @NonNull Observer<? super T> observer)`	
     - 最常用的方法，需要提供Observer处理数据变更后的处理。LifecycleOwner则是我们能够正确处理声明周期的关键！
-- getValue():
-    - T	获取数据
-- setValue(T value)	
-    - 设置数据
-- postValue(T value)	
-    - 在主线程中更新数据
+- `getValue()`    :  获取数据，返回T
+- `setValue(T value)`	: 设置数据
+- `postValue(T value)`  : 在子线程中更新数据
 
 
 ### 03.简单实践操作
@@ -148,7 +145,7 @@
     ```
 
 
-
+### 04.LiveData架构梳理
 #### 4.3 什么是观察者模式
 - `LiveData`实际上就像一个 **容器**, 本文中它存储了一个`T`类型的引用，每当这个容器内 `T`的数据发生变化，我们都能在回调函数中进行对应的处理。
 - 这似乎和我们日常用到的 `Button` 控件的 `setOnClickListener()` 非常相似，实际上点击事件的监听也正是 **观察者模式** 的一种体现。
@@ -166,6 +163,7 @@
 - `LiveData`本身非常简单，毕竟它本身的源码一共也就500行左右，也许你要说 **准备面试粗读一遍源码就够了**，很遗憾，即使是粗读了源码，也很难说能够完全招架更深入的提问...
 - 来看一道题目：在Activity完整的生命周期中，每个生命周期中设置setValue值，`Activity`一共观察到了几次数据的变更——即 **一共打印了几条Log** ？
 - 公布答案：只会记录onStart，onResume，onPause变化。意外的是，`livedata.observer()`的本次观察并没有观察到 **onCreate**、**onStop** 和 **onDestroy** 的数据变更。
+
 
 #### 6.2 Active状态思考
 - **LiveData的活跃状态(Active)** 相关代码吗？实际上，`LiveData`内部存储的每一个`LifecycleBoundObserver`本身都有`shouldBeActive`的状态：
