--- a/Read/ReadAndroidWiki/01.基础组件/02.Activity基础介绍.md
+++ b/Read/ReadAndroidWiki/01.基础组件/02.Activity基础介绍.md
@@ -18,7 +18,8 @@
 - 04.Activity异常情况
     - 4.1 Activity异常生命周期
     - 4.2 后台Activity被异常回收
-
+- 05.Activity横竖屏切换
+    - 5.1 生命周期
 
 
 ### 01.Activity生命周期
