--- a/Read/ReadShareWiki/03.建立体系/01.信息过载怎么办.md
+++ b/Read/ReadShareWiki/03.建立体系/01.信息过载怎么办.md
@@ -1,5 +1,14 @@
+#### 目录介绍
+- 01.先来描述一场景
 
 
+
+
+### 01.先来描述一场景
+- 每天都有大量的信息，知识，新闻等，让我们碎片化的时间感觉自己都是在学习。
+- 可能一时间难以回答这个问题，不要紧，可以坐下来静静思考一下……收藏好文章【收藏的可能下次就不会看了】，觉得这个文章很好，可是说不出所以然，究竟学到了什么？
+- 看到头条一些新闻，发现即使在一个地方上班，也能尽知天下大事，娱乐八卦，还有人间百态各种事情，让自己知识广度大有增长。我们发现自己有好多东西要学，但是哪些对我们有价值呢？哪些投资回报率不高呢？我们选择的标准是什么？
+- 我们好像懂得了很多东西，但是别人一问，我们却讲不出来……或者说出来没有自己的主见或深度；有些人阅读后能够形成自己的主见，并且结合自己的经历有深刻的分析；而有些人则只是看看而已，至于看完后，就难以想起刚才阅读究竟是讲了什么东西；甚至还有些，则是陷入了口水战。
 
 
 
