--- a/Read/ReadMeWiki/01.大型方案/19.状态栏通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/19.状态栏通用方案实践.md
@@ -153,7 +153,7 @@
     ```
 - 通过代码方式设置状态栏透明
     - 针对4.4到5.0之间，只是window为透明，移除已经存在假状态栏则，并且取消它的Margin间距
-    - 针对5.0以上，
+    - 针对5.0以上，直接调用`setStatusBarColor`设置透明颜色。
 - 注意一些问题
     - windowTranslucentStatus属性改变状态栏成半透明，并且布局网上顶，充满全屏
     - windowTranslucentNavigation属性改变底部导航栏颜色为半透明
