--- a/Read/ReadMeWiki/01.大型方案/19.状态栏通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/19.状态栏通用方案实践.md
@@ -14,7 +14,7 @@
     - 3.2 fitsSystemWindows
 - 04.状态栏设置操作
     - 4.1 如何给状态栏着色
-    - 4.2 隐藏状态栏
+    - 4.2 设置全屏幕展示
     - 4.3 如何设置状态栏透明
 - 05.状态栏封装设计
 - 06.状态栏遇到的坑
@@ -126,9 +126,19 @@
 
 
 
-#### 4.2 隐藏状态栏
-- 
-
+#### 4.2 设置全屏幕展示
+- 背景：有些内容在全屏模式下会让用户获得最佳体验，例如视频。既然是全屏幕展示，那么则需要隐藏状态栏，隐藏底部导航栏。
+- 第一种方式：向后倾斜
+    - 向后倾斜模式适用于用户不会与屏幕进行大量互动的全屏体验，例如在观看视频时。当用户希望调出系统栏时，只需点按屏幕上的任意位置即可。
+- 第二种方式：沉浸模式
+    - 沉浸模式适用于用户将与屏幕进行大量互动的应用。当用户需要调出系统栏时，他们可从隐藏系统栏的任一边滑动。
+- 第三种方式：粘性沉浸模式
+    - 在普通的沉浸模式中，只要用户从边缘滑动，系统就会负责显示系统栏。在粘性沉浸模式下，如果系统界面可见性发生变化，您无法收到回调。
+    - 在粘性沉浸模式下，如果用户从隐藏了系统栏的边缘滑动，系统栏会显示出来，是半透明的，并且轻触手势会传递给应用，因此应用也会响应该手势。
+- 关于什么时候设置全屏幕展示
+    - 第一种，在onCreate设置，网络上大部分方案是这样的。但是隐藏状态栏后，用户手指滑动让状态栏出现，则可能会有视觉上bug
+    - 第二种，监听页面状态栏变化，实现状态之间的无缝切换，界面控件的可见性与系统栏保持同步。当应用进入沉浸模式后，任何界面控件也应随系统栏一起隐藏，然后在系统界面重新出现时也再次显示出来。为此，可以在 View.OnSystemUiVisibilityChangeListener 以接收回调
+    - 第三种，实现 onWindowFocusChanged()。 如果您获得窗口焦点，则可能需要再次隐藏系统栏。 
 
 
 
