--- a/Read/ReadMeWiki/01.大型方案/19.状态栏通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/19.状态栏通用方案实践.md
@@ -16,7 +16,10 @@
     - 4.1 如何给状态栏着色
     - 4.2 设置全屏幕展示
     - 4.3 如何设置状态栏透明
+    - 4.4 隐藏底部导航栏
+    - 4.5 隐藏状态栏
 - 05.状态栏封装设计
+    - 5.1 封装库聚合的能力
 - 06.状态栏遇到的坑
     - 6.1 状态栏不占位的问题
     - 6.2 状态栏文字颜色bug
