--- a/Read/ReadMeWiki/00.方案实践/02.Crash治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.Crash治理优化总结.md
@@ -9,6 +9,7 @@
     - 2.2 空指针崩溃问题
     - 2.3 索引越界异常
     - 2.4 核心catch上报
+    - 2.5 不要随意catch
 - 03.系统级别Crash
     - 3.1 排查解决思路
     - 3.2 解决Toast崩溃
@@ -116,6 +117,9 @@
 - 核心try-catch建议增加APM异常上报
     - 
 
+
+
+#### 2.5 不要随意catch
 
 
 
